Issue #12778: Reduce memory consumption when JSON-encoding a large container of many small objects.